shuffle code chunks

--- a/analysis/Fig1_script.Rmd
+++ b/analysis/Fig1_script.Rmd
@@ -38,17 +38,23 @@ knitr::opts_chunk$set(
 ```
 
 
-```{r}
+```{r source, cache=FALSE}
 # read raw file
 library(here)
 source(here("analysis", "Functions.R"))
+```
+
+
+```{r}
+adult_raw<-readRDS(here("data","adult_raw.RDS"))
 adult<-readRDS(here("data","adult_filtered.RDS"))
 adult<-SetIdent(adult, value="broad_cell_type")
 ```
 
-
 ### Supp Fig1A - pre integration
 ```{r}
+
+
 # tiff(here("output", "SupFigures","SupFig1A_1.tiff"), units="in", width=8, height=6, res=300)
 DimPlot(adult, reduction = "umap.unintegrated", group.by = "group", label = F, cols = CFG$groupspal, pt.size = 0.01, raster=FALSE) + xlab("umap_1") + ylab("umap_2")+theme(axis.text.x=element_text(size=20),axis.text.y=element_text(size=20), axis.title.x = element_text(size=20), axis.title.y = element_text(size=20), legend.text = element_text(size=20), title = element_text(size=20))
 # dev.off()
@@ -66,7 +72,6 @@ DimPlot(adult, reduction = "umap.unintegrated", group.by = "sample", label = F, 
 ### Supp Fig1B
 
 ```{r}
-adult_raw<-readRDS(here("data","adult_raw.RDS"))
 qc_thresholds <- read.table(here("data","adult_QC_thresholds.txt"), header = T, sep='\t')
 
 samples<-unique(adult_raw$sample)
