--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -10,4 +10,4 @@ editor_options:
 
 Welcome to my research website.
 List:
-[Figure1](https://saltalab.github.io/Adult_hippocampal_neurogenesis/Fig1_script.html)
+- [Figure 1](https://saltalab.github.io/Adult_hippocampal_neurogenesis/Fig1_script.html)
