--- a/analysis/Fig1_script.Rmd
+++ b/analysis/Fig1_script.Rmd
@@ -1,10 +1,10 @@
 ---
 title: "Figure1_plots"
-output: 
-  html_document:
-  code_folding: hide
-  toc: true
-  toc_depth: 2
+output:
+  html_notebook: default
+  workflowr::wflow_html:
+    toc: false
+    code_folding: hide
 date: "2024-07-19"
 author: "Salta Lab"
 ---
@@ -34,7 +34,7 @@ knitr::opts_chunk$set(
     echo           = TRUE,
     error          = FALSE,
     fig.align      = "center",
-    fig.width      = 10,
+    fig.width      = 12,
     fig.height     = 8,
     message        = FALSE,
     warning        = FALSE,
@@ -52,15 +52,15 @@ adult<-readRDS(here("data","adult_filtered_light.RDS"))
 adult<-SetIdent(adult, value="broad_cell_type")
 
 # tiff(here("output", "SupFigures","SupFig1A_1.tiff"), units="in", width=8, height=6, res=300)
-DimPlot(adult, reduction = "umap.unintegrated", group.by = "group", label = F, cols = CFG$groupspal, pt.size = 0.01, raster=FALSE) + xlab("umap_1") + ylab("umap_2")+theme(axis.text.x=element_text(size=20),axis.text.y=element_text(size=20), axis.title.x = element_text(size=20), axis.title.y = element_text(size=20), legend.text = element_text(size=20), title = element_text(size=20))
+DimPlot(adult, reduction = "umap.unintegrated", group.by = "group", label = F, cols = CFG$groupspal, pt.size = 0.01, raster=FALSE) + xlab("umap_1") + ylab("umap_2")+theme(axis.text.x=element_text(size=12),axis.text.y=element_text(size=12), axis.title.x = element_text(size=12), axis.title.y = element_text(size=12), legend.text = element_text(size=12), title = element_text(size=12))
 # dev.off()
 
 # tiff(here("output", "SupFigures","SupFig1A_2.tiff"), units="in", width=8, height=6, res=300)
-DimPlot(adult, reduction = "umap.unintegrated", group.by = "Run", label = F, cols = CFG$mypal[11:16], pt.size = 0.01, raster=FALSE) + xlab("umap_1") + ylab("umap_2")+theme(axis.text.x=element_text(size=20),axis.text.y=element_text(size=20), axis.title.x = element_text(size=20), axis.title.y = element_text(size=20), legend.text = element_text(size=20), title = element_text(size=20))
+DimPlot(adult, reduction = "umap.unintegrated", group.by = "Run", label = F, cols = CFG$mypal[11:16], pt.size = 0.01, raster=FALSE) + xlab("umap_1") + ylab("umap_2")+theme(axis.text.x=element_text(size=12),axis.text.y=element_text(size=12), axis.title.x = element_text(size=12), axis.title.y = element_text(size=12), legend.text = element_text(size=12), title = element_text(size=12))
 # dev.off()
 
 # tiff(here("output", "SupFigures","SupFig1A_3.tiff"), units="in", width=8, height=6, res=300)
-DimPlot(adult, reduction = "umap.unintegrated", group.by = "sample", label = F, cols = CFG$mypal, pt.size = 0.01, raster=FALSE) + xlab("umap_1") + ylab("umap_2")+theme(axis.text.x=element_text(size=20),axis.text.y=element_text(size=20), axis.title.x = element_text(size=20), axis.title.y = element_text(size=20), legend.text = element_text(size=20), title = element_text(size=20))
+DimPlot(adult, reduction = "umap.unintegrated", group.by = "sample", label = F, cols = CFG$mypal, pt.size = 0.01, raster=FALSE) + xlab("umap_1") + ylab("umap_2")+theme(axis.text.x=element_text(size=12),axis.text.y=element_text(size=12), axis.title.x = element_text(size=12), axis.title.y = element_text(size=12), legend.text = element_text(size=12), title = element_text(size=12))
 # dev.off()
 
 rm(adult)
@@ -102,8 +102,8 @@ ggplot(metadata, aes(x = sample, y = percent_ribo, fill = group)) +
   scale_y_log10(labels = label_scientific()) + 
   scale_fill_manual(values = CFG$groupspal) +   
   theme_minimal() +                            
-  theme(axis.text.x = element_text(angle = 45, hjust = 1, size=20), axis.text.y = element_text(size=20), 
-        legend.text = element_text(size = 20), legend.title = element_text(size=20),
+  theme(axis.text.x = element_text(angle = 45, hjust = 1, size=12), axis.text.y = element_text(size=12), 
+        legend.text = element_text(size = 20), legend.title = element_text(size=12),
         plot.title = element_text(size = 24, face = "bold"),
         panel.border = element_blank(), panel.grid.major = element_blank(),panel.grid.minor = element_blank()) +
   labs(title = "pct_ribo", x = "", y = "", fill = "Group")
@@ -124,8 +124,8 @@ ggplot(metadata, aes(x = sample, y = velocyto_unsplicedratio, fill = group)) +
   scale_fill_manual(values = CFG$groupspal) +  
   geom_hline(yintercept = 0.25) +
   theme_minimal() +                      
-  theme(axis.text.x = element_text(angle = 45, hjust = 1, size=20), axis.text.y = element_text(size=20), 
-        legend.text = element_text(size = 20), legend.title = element_text(size=20),
+  theme(axis.text.x = element_text(angle = 45, hjust = 1, size=12), axis.text.y = element_text(size=12), 
+        legend.text = element_text(size = 20), legend.title = element_text(size=12),
         plot.title = element_text(size = 24, face = "bold"),
         panel.border = element_blank(), panel.grid.major = element_blank(),panel.grid.minor = element_blank()) +
   labs(title = "Intronic_Ratio", x = "", y = "", fill = "Group")
@@ -190,16 +190,16 @@ adult<-readRDS(here("data","adult_filtered_light.RDS"))
 adult<-SetIdent(adult, value="broad_cell_type")
 
 # tiff(here("output", "SupFigures","SupFig1A_3.tiff"), units="in", width=8, height=6, res=300)
-DimPlot(adult, reduction = "harmony.umap", group.by = "group", label = F, cols = CFG$groupspal, pt.size = 0.01, raster=FALSE) + xlab("harmony.umap_1") + ylab("harmony.umap_2")+theme(axis.text.x=element_text(size=20),axis.text.y=element_text(size=20), axis.title.x = element_text(size=20), axis.title.y = element_text(size=20), legend.text = element_text(size=20), title = element_text(size=20))
+DimPlot(adult, reduction = "harmony.umap", group.by = "group", label = F, cols = CFG$groupspal, pt.size = 0.01, raster=FALSE) + xlab("harmony.umap_1") + ylab("harmony.umap_2")+theme(axis.text.x=element_text(size=12),axis.text.y=element_text(size=12), axis.title.x = element_text(size=12), axis.title.y = element_text(size=12), legend.text = element_text(size=12), title = element_text(size=12))
 # dev.off()
 
 
 # tiff(here("output", "SupFigures","SupFig1A_4.tiff"), units="in", width=8, height=6, res=300)
-DimPlot(adult, reduction = "harmony.umap", group.by = "Run", label = F, cols = CFG$mypal[11:16], pt.size = 0.01, raster=FALSE) + xlab("harmony.umap_1") + ylab("harmony.umap_2")+theme(axis.text.x=element_text(size=20),axis.text.y=element_text(size=20), axis.title.x = element_text(size=20), axis.title.y = element_text(size=20), legend.text = element_text(size=20), title = element_text(size=20))
+DimPlot(adult, reduction = "harmony.umap", group.by = "Run", label = F, cols = CFG$mypal[11:16], pt.size = 0.01, raster=FALSE) + xlab("harmony.umap_1") + ylab("harmony.umap_2")+theme(axis.text.x=element_text(size=12),axis.text.y=element_text(size=12), axis.title.x = element_text(size=12), axis.title.y = element_text(size=12), legend.text = element_text(size=12), title = element_text(size=12))
 # dev.off()
 
 # tiff(here("output", "SupFigures","SupFig1A_5.tiff"), units="in", width=8, height=6, res=300)
-DimPlot(adult, reduction = "harmony.umap", group.by = "sample", label = F, cols = CFG$mypal, pt.size = 0.01, raster=FALSE) + xlab("harmony.umap_1") + ylab("harmony.umap_2")+theme(axis.text.x=element_text(size=20),axis.text.y=element_text(size=20), axis.title.x = element_text(size=20), axis.title.y = element_text(size=20), legend.text = element_text(size=20), title = element_text(size=20))
+DimPlot(adult, reduction = "harmony.umap", group.by = "sample", label = F, cols = CFG$mypal, pt.size = 0.01, raster=FALSE) + xlab("harmony.umap_1") + ylab("harmony.umap_2")+theme(axis.text.x=element_text(size=12),axis.text.y=element_text(size=12), axis.title.x = element_text(size=12), axis.title.y = element_text(size=12), legend.text = element_text(size=12), title = element_text(size=12))
 # dev.off()
 
 ```
